apps/media/manyfold/service-manyfold.yaml
apiVersion: v1
kind: Service
metadata:
  name: manyfold
  namespace: manyfold
spec:
  selector:
    app: manyfold
  ports:
    - protocol: TCP
      port: 3214
      targetPort: 3214
  type: ClusterIP
